syntax = "proto3";

package user.v1;

option go_package = "github.com/Josy-coder/user-service/proto/user/v1;userv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc GetUserByClerkID (GetUserByClerkIDRequest) returns (UserResponse);
  rpc SyncUserWithClerk (SyncUserWithClerkRequest) returns (UserResponse);
}

message User {
  int32 id = 1;
  string clerk_id = 2;
  string email = 3;
  string username = 4;
  string first_name = 5;
  string last_name = 6;
  string profile_image_url = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp last_login = 10;
}

message CreateUserRequest {
  string clerk_id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string profile_image_url = 6;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserByClerkIDRequest {
  string clerk_id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string profile_image_url = 5;
}

message DeleteUserRequest {
  int32 id = 1;
}

message ListUsersRequest {
  int32 page_size = 1;
  int32 page = 2;
}

message SyncUserWithClerkRequest {
  string clerk_id = 1;
}

message UserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
}